@@ -1,7 +1,8 @@
 # 3.18.0 (2024-XX-XX)
 
+ * Fix unary operator precedence change
  * Ignore `SyntaxError` exceptions from undefined handlers when using the `guard` tag
- * Add a way to stream template rendering (`TemplateWrapper::stream()` and `TemplateWrapper::streamBlock()` )
+ * Add a way to stream template rendering (`TemplateWrapper::stream()` and `TemplateWrapper::streamBlock()`)
 
 # 3.17.1 (2024-12-12)
 
